fix index card too large

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -658,7 +658,7 @@ body, html {
     bottom: 65px;
     right: 2.5%;
     width: 350px;
-    height: 100%;
+    height:75%;
     max-height: 575px;
     box-shadow: 4px 4px 100px rgba(0,0,0,.2);
     border-radius: 10px;
@@ -719,7 +719,7 @@ body, html {
 
   .header {
     height: 70px;
-    padding: 20px 20px 20px 20px;
+    padding: 5px 20px 5px 20px;
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -731,6 +731,10 @@ body, html {
   /*   transform: translateY(1em);
     opacity: 0;
     transition: all .6s ease .4s; */
+  }
+
+  .card-nup p{
+    margin-bottom: 0 !important;
   }
   .phone{
     color: #11a553;
@@ -756,10 +760,11 @@ body, html {
   .header p {
     font-size: .9em;
     opacity: .8;
+    margin-bottom:0 !important;
   }
   .card-nup{
     width: 88%;
-    margin: 15px auto 15px auto;
+    margin: -15px auto 5px auto;
     border-radius: 7px !important;
     box-shadow: 0 2px 15px rgba(0,0,0,.2);
     background: #f5f5f5;
@@ -788,7 +793,7 @@ body, html {
     margin: 5% auto 0 auto;
   }
   .form-group {
-    margin-bottom: 8px;
+    margin-bottom: 8px !important;
   }
   .form-control {
     display: block;
